United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6900899 vm fails to start when -Xmx value is less than OldSize + NewSize
6900899 : vm fails to start when -Xmx value is less than OldSize + NewSize

Details
Type:
Bug
Submit Date:
2009-11-12
Status:
Closed
Updated Date:
2011-03-07
Project Name:
JDK
Resolved Date:
2011-03-07
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
Heap size ergo ignores -Xmx == MaxHeapSize when setting the minimum heap size.
If OldSize + NewSize > MaxHeapSize, then the vm will fail to start with the message

"Incompatible minimum and initial heap sizes specified"

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/84cb6f20afb3
                                     
2009-11-30
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/84cb6f20afb3
                                     
2009-11-23
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/0ad684e27697
                                     
2009-11-13
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/0ad684e27697
                                     
2009-11-13
EVALUATION

Surfaced when with -Xmx8m.  Heap size ergo defaults OldSize + NewSize to 12m,
thus MaxHeapSize < OldSize + NewSize, which provoked the failure.
                                     
2009-11-12
SUGGESTED FIX

In Arguments::set_heap_size(), set the minimum heap size to
min(OldSize + NewSize, MaxHeapSize).
                                     
2009-11-12



Hardware and Software, Engineered to Work Together