6900899: vm fails to start when -Xmx value is less than OldSize + NewSize

Set minimum heap size to min(OldSize + NewSize, MaxHeapSize) in Arguments::set_heap_size().

Reviewed-by: kvn, ysr, tonyp